--- a/demo1.html
+++ b/demo1.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<script type="text/javascript" src"./drag.js"></script>
 	</head>
 	<body>
+		<div id="div1"></div>
 	</body>
 </html>
