--- a/demo1.html
+++ b/demo1.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<style>
+			#div1 {}
+		</style>
 		<script type="text/javascript" src"./drag.js"></script>
 	</head>
 	<body>
