--- a/demo1.html
+++ b/demo1.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title></title>
 		<style>
-			#div1 {width: 100px;height: 100px;background: red;}
+			#div1 {width: 100px;height: 100px;}
 		</style>
 		<script type="text/javascript" src"./drag.js"></script>
 	</head>
