--- a/demo1.html
+++ b/demo1.html
@@ -4,11 +4,14 @@
 		<meta charset="utf-8">
 		<title></title>
 		<style>
-			#div1 {width: 100px;height: 100px;position: absolute;}
+			#div1 {width: 100px;height: 100px;background: red;position: absolute;}
 		</style>
-		<script type="text/javascript" src"./drag.js"></script>
+		<script type="text/javascript" src="./drag.js"></script>
 	</head>
 	<body>
 		<div id="div1"></div>
+		<script>
+			drag("div1");
+		</script>
 	</body>
 </html>
