添加拖拽过程中会选中文本的情况

--- a/demo1.html
+++ b/demo1.html
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 		<div id="div1"></div>
+		<p style="position: absolute;left: 300px; top: 400px; background: yellow;height: 100px;width: 100px;">1111111111111</p>
 		<script>
 			drag("div1");
 		</script>
